--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KBT-Project</string>
+    <string name="home">Home</string>
+    <string name="patient">Patient</string>
+    <string name="profile">Profile</string>
 </resources>
